--- a/src/components/Layout34/Layout34.scss
+++ b/src/components/Layout34/Layout34.scss
@@ -1,6 +1,9 @@
 @import '../../common/styles/variables.scss';
 
 .layout-3-4 {
+    border-bottom: solid 1px $lighter-grey;
+    padding-bottom: 50px;
+
     .right-content {
         margin-top: 60px;
     }
@@ -9,6 +12,9 @@
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: $screen-lg-min) {
     .layout-3-4 {
+        border-bottom: none;
+        padding-bottom: 0;
+
         .right-content {
             padding-left: 50px;
         }
